--- a/Android/ProyectoADBJ/app/src/main/res/layout/activity_pago.xml
+++ b/Android/ProyectoADBJ/app/src/main/res/layout/activity_pago.xml
@@ -1,9 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".pago">
+    android:orientation="vertical"
+    tools:context=".menuRegistro">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#c8d6e5"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="20dp"
+            android:text="Tu pago"
+            android:textAlignment="center"
+            android:textColor="#222f3e"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+
+
+
+            <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <RadioButton
+                    android:checked="true"
+                    android:id="@+id/rbCredito"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="#222f3e"
+                    android:text="TARJETAS DE CREDITO"
+                    android:textSize="20dp"/>
+
+                <RadioButton
+                    android:id="@+id/rbDebito"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="#222f3e"
+                    android:text="TARJETAS DE DEBITO"
+                    android:textSize="20dp"/>
+
+                <RadioButton
+                    android:id="@+id/rbOnepay"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="#222f3e"
+                    android:text="ONEPAY"
+                    android:textSize="20dp"/>
+
+            </RadioGroup>
+        </LinearLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_margin="20dp"
+            android:orientation="horizontal"
+            android:layout_height="80dp"
+            android:padding="5dp">
+
+            <Button
+                android:id="@+id/btPagar"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:text="Ir a pago"
+                android:backgroundTint="#1dd1a1"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:layout_margin="10dp"
+                android:background="@drawable/edit_round"/>
+
+            <Button
+                android:id="@+id/btNoPagar"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/edit_round"
+                android:backgroundTint="#ee5253"
+                android:text="Volver"
+                android:textColor="#222f3e"
+                android:textStyle="bold"
+                android:layout_margin="10dp"
+                android:textSize="20dp"/>
+        </LinearLayout>
+
+    </LinearLayout>
+</LinearLayout>
