--- a/Android/ProyectoADBJ/app/src/main/res/layout/activity_registro.xml
+++ b/Android/ProyectoADBJ/app/src/main/res/layout/activity_registro.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".menuSubs">
+    tools:context=".menuRegistro">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#3F7CB4"
+        android:background="#c8d6e5"
         android:orientation="vertical"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -23,10 +24,14 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Nueva Cuenta"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Únete a nosotros!"
             android:textAlignment="center"
-            android:textSize="30sp" />
+            android:textColor="#222f3e"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,19 +41,53 @@
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="100dp"
+                android:layout_width="90dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Usuario"
-                android:textSize="20sp" />
+                android:text="Nombre"
+
+                android:textColor="#222f3e"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/txNombre"
+                android:id="@+id/txNombres"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_weight="1"
+                android:background="@drawable/edit_round"
                 android:ems="10"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:paddingLeft="20dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/lbApellido"
+                android:layout_width="90dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Apellidos"
+                android:textColor="#222f3e"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/txApellidos"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/edit_round"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:paddingLeft="20dp" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -59,19 +98,23 @@
 
             <TextView
                 android:id="@+id/textView15"
-                android:layout_width="100dp"
+                android:layout_width="90dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="Email"
-                android:textSize="20sp" />
+                android:textColor="#222f3e"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/txMail"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_weight="1"
+                android:background="@drawable/edit_round"
                 android:ems="10"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:paddingLeft="20dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -82,19 +125,51 @@
 
             <TextView
                 android:id="@+id/textView19"
-                android:layout_width="100dp"
+                android:layout_width="90dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="Password"
-                android:textSize="20sp" />
+                android:textColor="#222f3e"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/txPassword"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_weight="1"
+                android:background="@drawable/edit_round"
                 android:ems="10"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:textAlignment="center" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/lbRepetirPassword"
+                android:layout_width="90dp"
+                android:layout_height="66dp"
+                android:layout_weight="1"
+                android:text="Confirma tu password"
+                android:textColor="#222f3e"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/txRepetirPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@drawable/edit_round"
+                android:ems="10"
+                android:inputType="textPassword"
+                android:textAlignment="center" />
 
         </LinearLayout>
 
@@ -106,70 +181,78 @@
 
             <TextView
                 android:id="@+id/textView20"
-                android:layout_width="100dp"
+                android:layout_width="25dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Genero"
-                android:textSize="20sp" />
+                android:text="Género"
+                android:textColor="#222f3e"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <RadioGroup
+                android:id="@+id/rgGenero"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
 
                 <RadioButton
-                    android:id="@+id/radioButton4"
+                    android:checked="true"
+                    android:id="@+id/rbMasculino"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Masculino" />
+                    android:text="Masculino"
+                    android:textColor="#222f3e"
+                    android:textStyle="bold" />
 
                 <RadioButton
-                    android:id="@+id/radioButton5"
+                    android:id="@+id/rbFemenino"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Femenino" />
+                    android:text="Femenino"
+                    android:textColor="#222f3e"
+                    android:textStyle="bold" />
 
                 <RadioButton
-                    android:id="@+id/radioButton6"
+                    android:id="@+id/rbTula"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="No binario" />
+                    android:text="Tengo tula y tetas"
+                    android:textColor="#222f3e"
+                    android:textStyle="bold" />
+
+
             </RadioGroup>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
-
-            <CheckBox
-                android:id="@+id/checkBox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Deseo suscribirme al boletin" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="5dp">
 
             <Button
                 android:id="@+id/btAceptarSub"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:text="Aceptar" />
+                android:background="@drawable/edit_round"
+                android:backgroundTint="#1dd1a1"
+                android:text="Formas de pago"
+                android:textSize="18dp" />
 
             <Button
                 android:id="@+id/btCancelarSub"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:text="Cancelar" />
+                android:background="@drawable/edit_round"
+                android:backgroundTint="#ee5253"
+                android:text="Volver"
+                android:textColor="#222f3e"
+                android:textSize="18dp" />
         </LinearLayout>
 
     </LinearLayout>
