--- a/ProyectoADBJ/app/src/main/res/layout/activity_pago.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/activity_pago.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
-            android:text="TUS DATOS"
+            android:text="Todo listo para tu registro"
             android:textAlignment="center"
             android:textColor="#25364F"
             android:textSize="25dp"
@@ -34,37 +34,57 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="100dp"
             android:layout_margin="20dp"
-            android:background="@drawable/button_round"
-            android:backgroundTint="#8395a7"
             android:orientation="vertical">
 
 
             <TextView
-                android:id="@+id/lbNombreRegistrado"
+                android:id="@+id/lbNombreRegistrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:text="Pedrito de Los palotes"
-                android:textAlignment="center"
+                android:textColor="#25364F"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/lbPlanRegistrar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Mr Olympia"
                 android:textColor="#25364F"
                 android:textSize="18dp"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/lbCorreoRegistrado"
+                android:id="@+id/lbUsernameRegistrar"
+                android:layout_margin="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="pedrito@lospalotes.net"
-                android:textAlignment="center"
                 android:textColor="#25364F"
                 android:textSize="18dp"
                 android:textStyle="bold" />
 
 
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/lbPrecioRegistrar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="$ 100.000"
+                android:textColor="#DF7938"
+                android:textAlignment="center"
+                android:textSize="40dp">
+
+            </TextView>
         </LinearLayout>
 
 
@@ -152,7 +172,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/edit_round"
                 android:backgroundTint="#1dd1a1"
-                android:text="Ir a pago"
+                android:text="REGISTRAR"
                 android:textColor="#25364F"
                 android:textSize="20dp"
                 android:textStyle="bold" />
